added sign-up/in , updated swagger docs, updated users table script
