# docs/catbytes_api_swagger.yaml
@@ -248,6 +248,79 @@ paths:
                   users:
                     type: object
                     example: [{"id":1,"name":"Jane","languages":["English","Spanish"]}, {"id":2,"name":"Nina","languages":["English","Russian"]}]
+  /users/login:
+    post:
+      tags:
+        - users
+      summary: User login
+      description: Authenticates a user based on a provided Firebase token.
+      operationId: loginUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                  example: "FIREBASE_TOKEN"
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 42
+                      name:
+                        type: string
+                        example: Jane
+                      email:
+                        type: string
+                        example: jane@example.com
+                      about:
+                        type: string
+                        example: Hi iam Jane 
+                      created_at:
+                        type: string
+                        example: "2024-12-15T17:27:56.146Z"
+                      languages:
+                        type: array
+                        items:
+                          type: string
+                        example: ["English", "Spanish"]
+                      firebase_id:
+                        type: string
+                        example: "aabbccddeeffgggkkk"
+                      
+        '401':
+          description: Unauthorized - No token provided or invalid token.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "No token provided"
+        '403':
+          description: Forbidden - Invalid application status or email verification
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message
+                    example: "Email not verified"
   /user/{user_id}:
     get:
       tags:
